--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -2,7 +2,7 @@
   "name": "@aragon/react-scripts",
   "version": "1.1.0-aragon.1",
   "description": "Configuration and scripts for Create React App.",
-  "repository": "facebook/create-react-app",
+  "repository": "aragon/create-react-app",
   "license": "MIT",
   "engines": {
     "node": ">=6"
