Add a script to increment the version: npm run aragon:version

--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -20,6 +20,9 @@
   "bin": {
     "react-scripts": "./bin/react-scripts.js"
   },
+  "scripts": {
+    "aragon:version": "./scripts/aragon-version.sh"
+  },
   "dependencies": {
     "@babel/core": "7.0.0-beta.42",
     "@babel/runtime": "7.0.0-beta.42",
