--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -31,15 +31,15 @@
     "babel-eslint": "8.2.2",
     "babel-jest": "22.4.1",
     "babel-loader": "8.0.0-beta.0",
-    "babel-plugin-named-asset-import": ">=1.0.0-next.b2fd8db8 <2.0.0",
-    "babel-preset-react-app": ">=4.0.0-next.b2fd8db8 <5.0.0",
+    "babel-plugin-named-asset-import": "1.0.0-next.66cc7a90",
+    "babel-preset-react-app": "4.0.0-next.66cc7a90",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "2.3.0",
     "css-loader": "0.28.9",
     "dotenv": "5.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.15.0",
-    "eslint-config-react-app": ">=3.0.0-next.b2fd8db8 <4.0.0",
+    "eslint-config-react-app": "3.0.0-next.66cc7a90",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.41.0",
     "eslint-plugin-import": "2.8.0",
@@ -59,7 +59,7 @@
     "postcss-loader": "2.0.10",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "react-dev-utils": ">=6.0.0-next.b2fd8db8 <7.0.0",
+    "react-dev-utils": "6.0.0-next.66cc7a90",
     "resolve": "1.6.0",
     "sass-loader": "7.0.1",
     "style-loader": "0.19.1",
